--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,7 @@
 [submodule "buildbot"]
         path = buildbot
         url = https://github.com/lutris/buildbot/
+[submodule "wine-wayland"]
+	path = wine-wayland
+	url = https://gitlab.winehq.org/afrantzis/wine.git
+	branch = wayland
